<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DonateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"/>


    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_below="@id/appBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtDetailsHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/submit_your_details"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNameHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDetailsHead"
                android:layout_marginStart="30dp"
                android:text="@string/name_of_the_donor"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNameHead"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:hint="@string/name"
                android:inputType="textCapWords"/>

            <TextView
                android:id="@+id/txtPan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/pan_of_donor"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/txtPan"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/pan"
                android:inputType="textCapCharacters"/>

            <TextView
                android:id="@+id/txtContactHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPan"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/phone_number"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/txtContactHead"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/number_10_digits"
                android:inputType="phone"
                android:maxLength="10" />

            <TextView
                android:id="@+id/txtMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etContact"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/e_mail"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/txtMail"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/txtAddressHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMail"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/txtAddressHead"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/house_no_street_name_amp_village_colony"
                android:inputType="text"/>

            <LinearLayout
                android:id="@+id/llAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAddress"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/etAddress2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:hint="@string/city"
                    android:inputType="textCapWords"/>

                <EditText
                    android:id="@+id/etAddress3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:hint="@string/state"
                    android:inputType="textCapWords"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAddress"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/etAddress4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:hint="@string/district"
                    android:inputType="textCapWords"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAddress1"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/amount_of_donation"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/txtAmount"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/amount"
                android:inputType="number"/>

            <TextView
                android:id="@+id/txtMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAmount"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/mode_of_payment"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMode">
                <RadioButton
                    android:id="@+id/txtMode1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/online_transfer"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/txtMode2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cheque_dd_pay_order_to_be_drawn_in_favour_of_graphic_era_educational_society"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/txtMode3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/cash_not_more_than_rs_2_000"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </RadioGroup>


            <TextView
                android:id="@+id/txtReference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/payment_reference_no"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtReference"
                android:text="@string/utr_no_cheque_dd_pay_order_no_date_and_bank"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/etReference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/sub"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/txtPurpose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etReference"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/purpose_of_donation"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPurpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/txtPurpose"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="text"/>


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPurpose"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        </RelativeLayout>

    </ScrollView>

<!--    <RelativeLayout-->
<!--        android:id="@+id/progressLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@color/colorPrimary"-->
<!--            android:alpha="0.3"/>-->

<!--        <ProgressBar-->
<!--            android:id="@+id/progressBar"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"/>-->

<!--    </RelativeLayout>-->

</RelativeLayout>