<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="#FFFFFF"
            android:src="@drawable/ic_close"/>

        <TextView
            android:id="@+id/abt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/cse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/abt"
            android:layout_margin="10dp"
            android:text="@string/department_of_computer_science_and_engineering"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/geu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cse"
            android:text="@string/graphic_era_university_dehradun"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/geu1"
            android:text="@string/developed_by_sidhant_bidaliya_n_b_tech_cse_4th_semester"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/sidd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dev"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:text="@string/sidd_bidaliya2000_gmail_com"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/design_default_color_primary_dark"
            android:textStyle="bold"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>