<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/graphic_era_helping_society_in_coronavirus_pandemic"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rlView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtHead">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerHome"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

            <ImageButton
                android:id="@+id/btnForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:background="@drawable/blur_background"
                android:alpha="0.5"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_forward" />

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:background="@drawable/blur_background"
                android:alpha="0.5"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_back" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/dotLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlView"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtDonate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dotLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/you_can_donate_to_graphic_era_university_for_combating_coronavirus_pandemic"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtDonateDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDonate"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/donations_will_be_eligible_for_deduction_under_section_80g_receipts_will_be_issued_to_registered_email_don_t_forget_to_fill_the_form"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/txtQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDonateDetail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/ic_qr"
            android:drawablePadding="10dp"
            android:text="@string/qr_code"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtWhatsAppNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtQR"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/you_can_also_share_your_donation_details_via_whatsapp_91_7456803478"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnDonate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtWhatsAppNo"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/donate_now"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>